--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@vercel/analytics": "^1.3.1",
     "appwrite": "^15.0.0",
+    "axios": "^1.7.7",
     "next": "14.2.11",
     "next-intl": "^3.19.4",
     "react": "^18",
