可以运行了QAQ

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,8 +16,5 @@ COPY . .
 # 暴露端口
 EXPOSE 3001
 
-# 设置环境变量
-ENV FLASK_APP=api/app.py
-
-# 启动命令
-CMD ["flask", "run", "--host=0.0.0.0"]
+# 修改启动命令
+CMD ["python", "app.py"]
