--- a/api/config.yml
+++ b/api/config.yml
@@ -1,3 +1,3 @@
 mongodb:
-  uri: "mongodb://mymongoadmin:chathope123123love@43.139.169.225:27017/textlingo?authSource=admin"
+  uri: "mongodb://username:password@localhost:27017/dbname?authSource=admin"
 secret_key: "your-secret-key" 
