--- a/api/config.yml
+++ b/api/config.yml
@@ -1,3 +1,3 @@
 mongodb:
-  uri: "mongodb://username:password@localhost:27017/dbname?authSource=admin"
+  uri: "mongodb://mongodb:27017/textlingo"
 secret_key: "your-secret-key" 
