--- a/textlingo-desktop/package.json
+++ b/textlingo-desktop/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^3.0.7",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
@@ -24,6 +25,7 @@
     "clsx": "^2.1.1",
     "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
