--- a/textlingo-desktop/src-tauri/Cargo.toml
+++ b/textlingo-desktop/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ scraper = "0.19.0"
 urlencoding = "2"
 warp = "0.3"
 tokio-util = { version = "0.7", features = ["io"] }
+base64 = "0.22"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
