--- a/textlingo-desktop/package.json
+++ b/textlingo-desktop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "textlingo-desktop",
+  "name": "openkoto-desktop",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@tauri-apps/cli": "^2",
+    "@types/node": "^25.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
