--- a/textlingo-desktop/package.json
+++ b/textlingo-desktop/package.json
@@ -24,6 +24,7 @@
     "ai": "^6.0.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "epubjs": "^0.3.93",
     "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
@@ -31,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
     "react-markdown": "^10.1.0",
+    "react-reader": "^2.0.15",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
