--- a/textlingo-desktop/package.json
+++ b/textlingo-desktop/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.3.0",
     "react-reader": "^2.0.15",
     "tailwind-merge": "^3.4.0"
   },
