--- a/textlingo-desktop/package.json
+++ b/textlingo-desktop/package.json
@@ -29,6 +29,7 @@
     "i18next": "^25.7.4",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.296",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.1",
@@ -48,6 +49,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-static-copy": "^3.1.5"
   }
 }
