--- a/textlingo-desktop/tsconfig.json
+++ b/textlingo-desktop/tsconfig.json
@@ -21,6 +21,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "forceConsistentCasingInFileNames": true,
     "paths": {
       "react": [
         "./node_modules/@types/react"
