--- a/textlingo-desktop/src-tauri/Cargo.toml
+++ b/textlingo-desktop/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ tokio-util = { version = "0.7", features = ["io"] }
 base64 = "0.22"
 tauri-plugin-dialog = "2.5.0"
 futures-util = "0.3"
+zip = "2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
